--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html><head> 
+<html>
+<head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
@@ -13,15 +14,15 @@
     <div id="message" class="ui"> 
      <h2 id="title"></h2> 
      <ul> 
-      <li>1. Avoid RED dots.</li> 
+      <li>1. Tránh chấm đỏ.</li> 
       <br> 
-      <li>2. Touch GREEN dots for invulnerability.</li> 
+      <li>2. Chạm vào các chấm XANH để có được khả năng bất tử vjppro.</li> 
       <br> 
-      <li>3. Use invulnerability to destroy RED dots.</li> 
+      <li>3. Dùng khả năng bất's tử để đấm hết chấm đỏ.</li> 
       <br> 
-      <li>4. Score EXTRA points by moving around a lot.</li> 
+      <li>4. Ghi ĐIỂM bằng cách né các chấm đỏ.</li> 
       <br> 
-      <li>5. STAY ALIVE !</li>
+      <li>5. HÃY CỐ GẮNG ĐẠT ĐƯỢC KỈ LỤC CAO NHẤT CÓ THỂ !</li>
      </ul> 
      <a href="#" id="startButton">Start</a> 
      <br> 
@@ -404,4 +405,5 @@
   Spacedots.init();
   </script> 
    
-  </body></html>
+  </body>
+</html>
